// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`methods bind, update, unbind should be called 1`] = `
Object {
  "Options": Object {
    "value": true,
  },
  "html": "",
}
`;

exports[`ref directive 1`] = `
Object {
  "Options": Object {
    "test": false,
  },
  "html": "",
}
`;

exports[`ref directive with custom tag 1`] = `
Object {
  "Options": Object {
    "test": false,
  },
  "html": "
<div>
  <div id=\\"foo\\">
    <div id=\\"custom\\">bar</div>
    <!--0-->
  </div>
</div>
",
}
`;

exports[`should be trimmed from html 1`] = `
Object {
  "Options": Object {},
  "html": "
<div></div>
<div></div>
<div></div>
",
}
`;
